# tf-worker

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  bk.cpp  compile_commands.json  compile_flags.txt  layer.cpp  layer.hpp  libtorch_download.sh  log.txt  main.cpp  model.hpp  ori  process.py  schema.json  test.cpp  utils.hpp  worker
.cache/clangd/index/: ATen.h.4579FEB69F8ECEC8.idx  ATenGeneral.h.D36792493A2AA072.idx  ATenOpList.h.5C1691924469498F.idx  ATen_fwd.h.661B7BED45D5B921.idx  AlignOf.h.9C169E8A51297F3A.idx  Allocator.h.14B799B895CE7D0C.idx  Array.h.F6318E63189957BD.idx  ArrayRef.h.E7B54323FA095B67.idx  AutogradState.h.2D718569E7F2D1C1.idx  BFloat16-inl.h.29B52A083AA330F1.idx  BFloat16.h.22079EE36CB77CFF.idx  Backend.h.0AEF110D7EA21493.idx  Backtrace.h.7DB96D0EA02F039A.idx  Bitset.h.75826810ADC90BAC.idx  C++17.h.06767ED24424543F.idx  CPUGeneratorImpl.h.F1CBC80FBD2E4D85.idx  CUDAHooksInterface.h.D2A39FD671AE9264.idx  CheckMemoryFormat.h.8377FF00FC5DFCF2.idx  CompileTimeFunctionPointer.h.1AF0D5273E9DF7C6.idx  Config.h.9F3B9E21B3C1EA85.idx  ConstexprCrc.h.26CC94D6FD34D958.idx  Context.h.87D01ED720117062.idx  CopyBytes.h.C84DCB0485CC7DF8.idx  CppSignature.h.B7619F563C1EEB53.idx  DefaultDtype.h.7ECD3E81DB53B1CF.idx  Deprecated.h.17C879EEF52CC96D.idx  DeprecatedTypeProperties.h.D79B522FEB486FCC.idx  DeprecatedTypePropertiesRegistry.h.B120270186A35A9D.idx  Device.h.38835966E7FD775B.idx  Device.h.E5A57082116983D6.idx  DeviceGuard.h.21036F26550A742C.idx  DeviceGuard.h.2328B25B2E6A0F1A.idx  DeviceGuardImplInterface.h.ADB377CE7A7C3A08.idx  DeviceType.h.C4DF162F02061FB0.idx  Dict.h.F4F244CD83115008.idx  Dict_inl.h.B7601BA7307D601D.idx  DimVector.h.28597FE210D36E58.idx  DimVector.h.69EA9E55F0A8546C.idx  DimVector.h.E24E0E912530FC20.idx  Dimname.h.B3A6C198A12DAAD0.idx  (+4095 more)
tf-worker/: log.txt
